--- a/features05.html
+++ b/features05.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-    <link rel="stylesheet" href="css/utilities02_cloud.css">
-    <link rel="stylesheet" href="css/style12_features.css">
+    <link rel="stylesheet" href="css/utilities05.css">
+    <link rel="stylesheet" href="css/style15.css">
     <title>Loruki | Cloud Hosting For Everyone</title>
 </head>
 <body>
@@ -15,9 +15,9 @@
             <h1 class="logo">Loruki.</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Features</a></li>
-                    <li><a href="docs.html">Docs</a></li>
+                    <li><a href="index12.html">Home</a></li>
+                    <li><a href="features05.html">Features</a></li>
+                    <li><a href="docs03.html">Docs</a></li>
                 </ul>
             </nav>
         </div>
@@ -110,9 +110,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Features</a></li>
-                    <li><a href="docs.html">Docs</a></li>
+                    <li><a href="index12.html">Home</a></li>
+                    <li><a href="features05.html">Features</a></li>
+                    <li><a href="docs03.html">Docs</a></li>
                 </ul>
             </nav>
             <div class="social">
