--- a/index12.html
+++ b/index12.html
@@ -26,14 +26,18 @@
     <!-- showcase -->
     <section class="showcase">
         <div class="container grid">
-            <div class="showcase-content">
+            <div class="showcase-text">
                 <h1>Easier Deployment</h1>
                 <p>Deploy web apps of all kinds, from large scale enterprise APIs to static websites for individuals. Fill out the form to try a demo of our platform</p>
                 <a href="features.html" class="btn btn-outline">Read More</a>
             </div>
             <div class="showcase-form card">
                 <h2>Request a Demo</h2>
-                <form action="">
+                <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
+                    <input type="hidden" name="form-name" value="contact">
+                    <p class="hidden">
+                        <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+                    </p>
                     <div class="form-control">
                         <input type="text" name="name" placeholder="Name" required>
                     </div>
