--- a/index06.html
+++ b/index06.html
@@ -25,7 +25,7 @@
     <!-- showcase -->
     <section class="showcase">
         <div class="container grid">
-            <div class="showcase-content">
+            <div class="showcase-text">
                 <h1>Easier Deployment</h1>
                 <p>Deploy web apps of all kinds, from large scale enterprise APIs to static websites for individuals. Fill out the form to try a demo of our platform</p>
                 <a href="features.html" class="btn btn-outline">Read More</a>
